better merchants page

--- a/main-files/merchants.html
+++ b/main-files/merchants.html
@@ -50,17 +50,17 @@
                         <div class="row align-items-center justify-content-between position-relative">
                             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-5 col-6">
                                 <div class="logo">
-                                    <a href="index.html" class="d-inline-block"><img src="images/logo/logo.png" alt="Evalo"></a>
+                                    <a href="index.html" class="d-inline-block"><img src="images/logo/logo.png" alt="Pickslot logo"></a>
                                 </div>
                             </div><!-- /col -->
                             <div class="col-xl-10 col-lg-10 col-md-1 col-sm-1 col-1 d-none d-lg-flex justify-content-end position-static">
+                                
                                 <div class="main-menu">
                                     <nav id="mobile-menu">
                                         <ul class="d-block">
-                                            <li class="full-mega-menu-position"><a class="active" href="index.html"><span lang="en">Home</span><span lang="gr">Αρχική</span></a></li>
                                             <li><a href="#calendar"><span lang="en">Calendar</span><span lang="gr">Αντζέντα</span></a></li>
-                                            <li><a href="#bot">Chat Bot</a></li>
-                                            <li><a href="#start"><span lang="en">Get started</span><span lang="gr">Χρήση</span></a></li>
+                                            <li><a href="#reservation"><span lang="en">Online Reservations</span><span lang="gr">Online Κρατήσεις</span></a></li>
+                                            <li><a href="#reminders"><span lang="en">Reminders</span><span lang="gr">Ειδοποιήσεις</span></a></li>
                                             <li><a href="#contact"><span lang="en">Contact form</span><span lang="gr">Επικοινωνία</span></a></li>
                                          </ul>
                                     </nav>
@@ -165,16 +165,16 @@
 
         <main class="over-hidden">
             <!-- ======slider-area-start=========================================== -->
-            <div class="slider-area position-relative home3 over-hidden home3 primary-bg">
+            <div class="slider-area position-relative over-hidden home3 ">
                 <div id="scene" class="position-absolute w-100 h-100 z-index1">
-                    <img data-depth="0.20" class="hm3-shape hm3-shape-1 d-none d-lg-inline-block s-shape" src="images/slider/home3-shape/hm3-shape1.png" alt="#">
+<!--                     <img data-depth="0.20" class="hm3-shape hm3-shape-1 d-none d-lg-inline-block s-shape" src="images/slider/home3-shape/hm3-shape1.png" alt="#">
                     <img data-depth="0.20" class="hm3-shape hm3-shape-2 bounce-animate2 d-none d-lg-inline-block" src="images/slider/home3-shape/hm3-shape2.png" alt="#">
-                    <img data-depth="0.20" class="hm3-shape hm3-shape-3 d-none d-lg-inline-block s-shape" src="images/slider/home3-shape/hm3-shape3.png" alt="#">
+                    <img data-depth="0.20" class="hm3-shape hm3-shape-3 d-none d-lg-inline-block s-shape" src="images/slider/home3-shape/hm3-shape3.png" alt="#"> -->
                     <img data-depth="0.20" class="hm3-shape hm3-shape-4 d-none d-lg-none bounce-animate2 d-sm-inline-block" src="images/slider/home3-shape/hm3-shape4.png" alt="#">
                     <img data-depth="0.20" class="hm3-shape hm3-shape-5 d-none d-lg-none bounce-animate2 d-md-inline-block" src="images/slider/home3-shape/hm3-shape5.png" alt="#">
                     <img data-depth="0.20" class="hm3-shape hm3-shape-6 d-none d-lg-none bounce-animate2 d-sm-inline-block" src="images/slider/home3-shape/hm3-shape6.png" alt="#">
-                    <img data-depth="0.20" class="hm3-shape hm3-shape-7 d-none d-lg-inline-block s-shape" src="images/slider/home3-shape/hm3-shape7.png" alt="#">
-                    <img data-depth="0.20" class="hm3-shape hm3-shape-8 d-none d-lg-inline-block s-shape" src="images/slider/home3-shape/hm3-shape8.png" alt="#">
+                    <!-- <img data-depth="0.20" class="hm3-shape hm3-shape-7 d-none d-lg-inline-block s-shape" src="images/slider/home3-shape/hm3-shape7.png" alt="#">
+                    <img data-depth="0.20" class="hm3-shape hm3-shape-8 d-none d-lg-inline-block s-shape" src="images/slider/home3-shape/hm3-shape8.png" alt="#">-->
                     <img data-depth="0.20" class="hm3-shape hm3-shape-9 d-none d-lg-block heartbeat2" src="images/slider/home3-shape/home3-round-shape1.png" alt="#">
                     <img data-depth="0.20" class="hm3-shape hm3-shape-10 d-none d-lg-block heartbeat2" src="images/slider/home3-shape/home3-round-shape2.png" alt="#">
                     <img data-depth="0.20" class="hm3-shape hm3-shape-11 d-none d-lg-block heartbeat" src="images/slider/home3-shape/home3.round-shape3.png" alt="#">
@@ -191,7 +191,7 @@
                                 <h1 hidden>Κρατήσεις στο Pickslot. Διαχειρίζεσαι beach bar, εστιατόριο, κομμωτήριο, μπαρμπέρικο? Είσαι personal trainer? Τώρα μπορείς να προσφέρεις online κρατήσεις για τις υπηρεσίες του καταστήματός σου </h1>
                                 <h2 hidden>Καταχώρησε την επιχείρησή σου και έλα στο Pickslot! Εύκολες και γρήγορες κρατήσεις και ραντεβού. Pickslot, όλες οι κρατήσεις σου σε μία εφαρμογή.</h2>
 
-                                <h1 class="f-700 pb-22 pr-0" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="150" lang="en">Book Now</h1>
+                                <h1 class="f-700 pb-22 pr-0" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="150" lang="en">Never miss a booking</h1>
                                 <h1 class="f-700 pb-22 pr-0" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="150" lang="gr">Πρόσφερε κρατήσεις 24/7</h1>
 
                                 <p data-aos="fade-right" data-aos-duration="2000" lang="en">
@@ -215,7 +215,7 @@
             </div><!-- /single-slider -->
 
             <!-- /bg-shape-slider -->
-            <img class="hm3-bg-shape hm3-bg-shape1 position-absolute " data-aos="fade-right" data-aos-duration="3000" data-aos-delay="150" src="images/slider/home3-shape/home3-shape1.png" alt="image">
+<!--             <img class="hm3-bg-shape hm3-bg-shape1 position-absolute " data-aos="fade-right" data-aos-duration="3000" data-aos-delay="150" src="images/slider/home3-shape/home3-shape1.png" alt="image">
             <img class="hm3-bg-shape hm3-bg-shape2 position-absolute " data-aos="fade-right" data-aos-duration="3000" data-aos-delay="150" src="images/slider/home3-shape/home3-shape2.png" alt="image">
             <img class="hm3-bg-shape hm3-bg-shape3 position-absolute " data-aos="fade-up" data-aos-duration="3000" data-aos-delay="150" src="images/slider/home3-shape/home3-shape3.png" alt="image">
             <img class="hm3-bg-shape hm3-bg-shape4 position-absolute " data-aos="fade-up" data-aos-duration="2000" data-aos-delay="150" src="images/slider/home3-shape/home3-shape4.png" alt="image">
@@ -225,7 +225,7 @@
             <img class="hm3-bg-shape hm3-bg-shape8 position-absolute " data-aos="zoom-in" data-aos-duration="3000" data-aos-delay="150" src="images/slider/home3-shape/home3-shape8.png" alt="image">
             <img class="hm3-bg-shape hm3-bg-shape9 position-absolute " data-aos="zoom-in" data-aos-duration="3000" data-aos-delay="150" src="images/slider/home3-shape/home3-shape9.png" alt="image">
             <img class="hm3-bg-shape hm3-bg-shape10 position-absolute " data-aos="zoom-in" data-aos-duration="3000" data-aos-delay="150" src="images/slider/home3-shape/home3-shape8.png" alt="image">
-
+ -->
             <div class="hm3-left-dotted position-absolute d-none d-md-block">
                 <img src="images/slider/home3-shape/home3-left-dotted.png" alt="image">
             </div><!-- /slider-left-dotted -->
@@ -243,7 +243,7 @@
 
 
 
-        <div id="integration" class="about-area home3 position-relative over-hidden">
+        <div id="reservation" class="about-area home3 position-relative over-hidden">
             <div class="home3-about pt-125 pb-170">
                 <div class="container">
                     <div class="row align-items-center pt-90">
@@ -252,10 +252,10 @@
                                 <div class="title">
                                     <!--<span class="theme-color f-700">Learn more about us</span>-->
                                     <h3 class="f-700 mb-30" lang="gr">Ανακαλύψτε το μέλλον της επιχείρησής σας μέσω της κοινότητας του Pickslot!</h3>
-                                    <p class="pb-10" lang="gr">Ανακαλύψτε τον κόσμο της ευκολίας και της άνεσης με το Pickslot Marketplace! Είστε έτοιμοι να αναδείξετε την επιχείρησή σας στο επόμενο επίπεδο; <br><br> Ενταχθείτε στο Pickslot και αποκτήστε πρόσβαση σε μια ολοκληρωμένη κοινότητα, όπου οι πελάτες σας μπορούν να σας βρουν εύκολα και να κλείσουν ραντεβού με άνεση από το κινητό τους τηλέφωνο. <br><br> Με το Pickslot, η διαχείριση των ραντεβού σας γίνεται απλή και αποτελεσματική, ενώ η αύξηση της ορατότητάς σας βοηθάει να φτάσετε νέους πελάτες και να αυξήσετε την επιχειρηματική σας απόδοση. Είναι η εποχή της αλλαγής και της επιτυχίας - ενωθείτε μαζί μας στο Pickslot και δώστε νέα δυναμική στην επιχείρησή σας!</p>
+                                    <p class="pb-10" lang="gr">Ανακαλύψτε τον κόσμο της ευκολίας και της άνεσης με τη πλατφόρμα του Pickslot! Είστε έτοιμοι να αναδείξετε την επιχείρησή σας στο επόμενο επίπεδο; <br><br> Ενταχθείτε στο Pickslot και αποκτήστε πρόσβαση σε μια ολοκληρωμένη κοινότητα, όπου οι πελάτες σας μπορούν να σας βρουν εύκολα και να κλείσουν ραντεβού με άνεση από το κινητό τους τηλέφωνο. <br><br> Με το Pickslot, η διαχείριση των ραντεβού σας γίνεται απλή και αποτελεσματική, ενώ η αύξηση της ορατότητάς σας βοηθάει να φτάσετε νέους πελάτες και να αυξήσετε την επιχειρηματική σας απόδοση. Είναι η εποχή της αλλαγής και της επιτυχίας - ενωθείτε μαζί μας στο Pickslot και δώστε νέα δυναμική στην επιχείρησή σας!</p>
 
-                                    <h3 class="f-700 mb-30" lang="en">Discover the future of your business through the Pickslot marketplace!</h3>
-                                    <p class="pb-10" lang="en">Discover the world of convenience and comfort with the Pickslot Marketplace! Are you ready to elevate your business to the next level? <br><br> Join Pickslot and gain access to a comprehensive community, where your customers can easily find you and book appointments seamlessly from their mobile phones. With Pickslot, managing your appointments becomes simple and effective, while increasing your visibility helps you reach new customers and boost your business performance. It's the era of change and success - join us at Pickslot and bring new dynamism to your business!"</p>
+                                    <h3 class="f-700 mb-30" lang="en">Discover the future of your business through the Pickslot platform!</h3>
+                                    <p class="pb-10" lang="en">Discover the world of convenience and comfort with the Pickslot platform! Are you ready to elevate your business to the next level? <br><br> Join Pickslot and gain access to a comprehensive community, where your customers can easily find you and book appointments seamlessly from their mobile phones. With Pickslot, managing your appointments becomes simple and effective, while increasing your visibility helps you reach new customers and boost your business performance. It's the era of change and success - join us at Pickslot and bring new dynamism to your business!"</p>
                                 </div>
                                
                             </div><!-- /about-left-content -->
@@ -270,6 +270,16 @@
                             </div><!-- /home3-about-img-wrapper -->
                         </div><!-- /col -->
                     </div><!-- /row -->
+                    <div class="row">
+                        <div class="download-logo  pb-10">
+                            <!-- <a href="#" class=" d-inline-block">
+                                <img src="images/logo/home5-app-store-logo.jpg" alt="image">
+                            </a> -->
+                            <a href="https://play.google.com/store/apps/details?id=io.pickslot.marketplace&hl=en_US" class=" d-inline-block">
+                                <img src="images/logo/home5-google-paly.jpg" alt="image">
+                            </a>
+                        </div><!-- /download-logo -->
+                    </div>
                 </div><!-- /container -->
             </div><!-- /home3-about-bg -->
         </div>
