--- a/main-files/index.html
+++ b/main-files/index.html
@@ -193,10 +193,10 @@
                             <h1 hidden>Κρατήσεις στο Pickslot. Διαχειρίζεσαι beach bar, εστιατόριο, κομμωτήριο, μπαρμπέρικο? Είσαι personal trainer? Τώρα μπορείς να προσφέρεις online κρατήσεις για τις υπηρεσίες του καταστήματός σου </h1>
                             <h2 hidden>Καταχώρησε την επιχείρησή σου και έλα στο Pickslot! Εύκολες και γρήγορες κρατήσεις και ραντεβού. Pickslot, όλες οι κρατήσεις σου σε μία εφαρμογή.</h2>
 
-                            <h2 class="f-300 pb-22 pr-0" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="150" lang="en">Discover the hottest beach bars in Chalkidiki</h2>
-                            <h2 class="f-300 pb-22 pr-0" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="150" lang="gr">Ανακάλυψε τα πιο hot beach bars της Χαλκιδικής</h2>
+                            <h2 class="f-300 pb-22 pr-0" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="150" lang="en">Discover the hottest beach bars in Chalkidiki</h2>
+                            <h2 class="f-300 pb-22 pr-0" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="150" lang="gr">Ανακάλυψε τα πιο hot beach bars της Χαλκιδικής</h2>
 
-                            <p data-aos="fade-right" data-aos-duration="2000" lang="en">
+                            <p data-aos="fade-right" data-aos-duration="1000" lang="en">
                                 Reserve a sunbed now!
                             </p>
 
@@ -206,15 +206,13 @@
                                 href="https://pickslot.web.app"
                                 type="submit" 
                                 name="submit" 
-                                data-aos="fade-up" 
-                                data-aos-anchor-placement="top-bottom" 
-                                data-aos-duration="2500"><span lang="gr">Κάνε κράτηση</span><span lang="en">Book now</span></a>
+                                ><span lang="gr">Κάνε κράτηση</span><span lang="en">Book now</span></a>
                             </div>
 
 
                         </div>
                     </div><!-- /col -->
-                    <div class="col-xl-6 col-lg-6  col-md-6  col-sm-6 col-6  d-flex align-items-center ">
+                    <div class="col-xl-6 col-lg-6  col-md-6  col-sm-6 col-6  d-flex align-items-center " data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1000" >
                         <div class="slider-img1 pl-65 z-index1 position-relative">
                             <img class="animated-plus" src="images/feature/home_pic.png" alt="image">
                         </div>
