#6 do not redirect to webapp in case of mobile

--- a/main-files/index.html
+++ b/main-files/index.html
@@ -193,8 +193,8 @@
                             <h1 hidden>Κρατήσεις στο Pickslot. Διαχειρίζεσαι beach bar, εστιατόριο, κομμωτήριο, μπαρμπέρικο? Είσαι personal trainer? Τώρα μπορείς να προσφέρεις online κρατήσεις για τις υπηρεσίες του καταστήματός σου </h1>
                             <h2 hidden>Καταχώρησε την επιχείρησή σου και έλα στο Pickslot! Εύκολες και γρήγορες κρατήσεις και ραντεβού. Pickslot, όλες οι κρατήσεις σου σε μία εφαρμογή.</h2>
 
-                            <h2 class="f-300 pb-22 pr-0" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="150" lang="en">Discover the hottest beach bars in Chalkidiki</h2>
-                            <h2 class="f-300 pb-22 pr-0" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="150" lang="gr">Ανακάλυψε τα πιο hot beach bars της Χαλκιδικής</h2>
+                            <h2 class="f-300 pb-22 pr-0" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="150" lang="en">Discover the hottest beach bars in Chalkidiki!</h2>
+                            <h2 class="f-300 pb-22 pr-0" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="150" lang="gr">Ανακάλυψε τα πιο hot beach bars της Χαλκιδικής!</h2>
 
                             <p data-aos="fade-right" data-aos-duration="1000" lang="en">
                                 Reserve a sunbed now!
