--- a/main-files/index.html
+++ b/main-files/index.html
@@ -44,13 +44,13 @@
 
         <!--  ====== header-area-start=======================================  -->
         <header>
-            <div id="header-sticky" class="transparent-header home3 header-area  pt-20 d-none d-lg-block">
+            <div id="header-sticky" class="transparent-header home3 header-area  pt-20 ">
                 <div class="header">
                     <div class="container">
                         <div class="row align-items-center justify-content-between position-relative">
                             <div class="col-xl-2 col-lg-2 col-md-3 col-sm-5 col-6">
                                 <div class="logo">
-                                    <a href="index.html" class="d-inline-block"><img src="images/logo/logo.png" alt="Evalo"></a>
+                                    <a href="index.html" class="d-inline-block"><img src="images/logo/logo.png" alt="Pickslot"></a>
                                 </div>
                             </div><!-- /col -->
                             <div class="col-xl-10 col-lg-10 col-md-1 col-sm-1 col-1 d-none d-lg-flex justify-content-end position-static">
@@ -101,7 +101,7 @@
         <!--  ====== header extra info start================================== -->
         <!-- side-mobile-menu start -->
 
-        <div class="side-mobile-menu white-bg pt-10 pb-30 pl-35 pr-30 pb-100 d-none d-lg-block">
+        <div class="side-mobile-menu white-bg pt-10 pl-35 pr-30 pb-10 d-none d-lg-block">
             <div class="w-100">
                 <div class="close-icon d-inline-block float-right clear-both mt-15 mb-10">
                     <a href="javascript:void(0);"><span class="icon-clear theme-color"><i class="fa fa-times"></i></span></a>
@@ -113,7 +113,7 @@
             <div class="mobile-menu mt-10 w-100"></div>
 
 
-            <ul class="social-link pt-50 clear-both">
+            <ul class="social-link clear-both">
 <!--                 <li class="d-inline-block">
                     <a class="facebook-color text-center pr-15 d-inline-block transition-3" href="#"><i class="fab fa-facebook-f"></i></a>
                 </li>
