Hide unresponsive sandwich menu at the top right

--- a/main-files/index.html
+++ b/main-files/index.html
@@ -85,9 +85,10 @@
                                     <div class="my-btn d-none d-sm-block">
                                         <a href="#contact" class="btn transparent-bg text-capitalize"><span lang="en">I am merchant</span><span lang="gr">Για επιχειρήσεις</span></a>
                                     </div><!-- /my-btn -->
-                                    <div class="d-block d-lg-none pl-20">
+                                    <!-- Sandwich menu bar-->
+                                    <!--<div class="d-block d-lg-none pl-20">
                                         <a class="mobile-menubar theme-color" href="javascript:void(0);"><i class="far fa-bars"></i></a>
-                                    </div>
+                                    </div>-->
                                 </div><!-- /header-right -->
                             </div><!-- /col -->
                         </div><!-- /row -->
