--- a/main-files/team.html
+++ b/main-files/team.html
@@ -128,10 +128,10 @@
                         <div class="row">
                             <div class="col-xl-12  col-lg-12  col-md-12  col-sm-12col-12  d-flex align-items-center justify-content-center">
                                 <div class="page-title mt-110 text-center">
-                                    <h1 hidden>Pickslot team. Η ομάδα του Picsklot. Online κρατήσεις για beach bars, εστιατόρια, κομμωτήρια και μπαρμπέρικα</h1>
+                                    <h1 hidden>Pickslot team. Η ομάδα του Picsklot. Online κρατήσεις για beach bars, εστιατόρια, κομμωτήρια και μπαρμπέρικα για Θεσσαλονίκη και Χαλκιδική</h1>
 
-                                    <h1 class="f-700 pb-22 pt-10 pr-0" lang="en">Who we are</h1>
-                                    <h1 class="f-700 pb-22 pt-10 pr-0"  lang="gr">Ποιοι είμαστε</h1>
+                                    <h3 class="f-700 pb-22 pt-30 pr-0" lang="en">Who we are</h3>
+                                    <h3 class="f-700 pb-22 pt-30 pr-0"  lang="gr">Ποιοι είμαστε</h3>
     
                                     <p lang="en">
                                         Pickslot is a project that started from a simple, everyday event: It was Saturday night and one of us needed a haircut. However, the barbershop was closed, so he had to wait until Tuesday to speak to his barber and book his appointment. When Tuesday finally came and the shop opened, he called to make his reservation. However, the barber's schedule was already full. The earliest availability for him was the following week...
