--- a/main-files/merchants.html
+++ b/main-files/merchants.html
@@ -112,9 +112,15 @@
                                     <div class="my-btn d-none d-sm-block">
                                         <a href="#contact" class="btn transparent-bg text-capitalize">I am merchant</a>
                                     </div><!-- /my-btn -->
+                                    
+                                    <!-- Sandwich menu bar-->
+                                    <!--
                                     <div class="d-block d-lg-none pl-20">
                                         <a class="mobile-menubar theme-color" href="javascript:void(0);"><i class="far fa-bars"></i></a>
                                     </div>
+                                    -->
+
+                                
                                 </div><!-- /header-right -->
                             </div><!-- /col -->
                         </div><!-- /row -->
@@ -207,7 +213,7 @@
                         </div><!-- /col -->
                         <div class="col-xl-6 col-lg-6  col-md-6  col-sm-12 col-12  d-flex align-items-center ">
                             <div class="slider-img1 pl-65 z-index1 position-relative">
-                                <img class="bounce-animate" src="images/slider/Customer_2.png" alt="image">
+                                <img  src="images/slider/Customer_2.png" alt="image">
                             </div>
                         </div><!-- /col -->
                     </div><!-- /row -->
