--- a/main-files/team.html
+++ b/main-files/team.html
@@ -53,8 +53,8 @@
                                 </div>
                             </div><!-- /col -->
                             <div class="header-right d-flex align-items-center justify-content-end">
-                                <div id="switch-lang" class="grab "><span lang="en">Ελληνικά</span><span lang="gr">English</span></div>
-                                <div id="switch-lang" class="arrow down"></div>
+                                <div id="switch-lang" class="grab "><span lang="en">Ελληνικά</span><span lang="el">English</span></div>
+                                <div class="arrow down"></div>
                             </div>
 
                             <!-- /col -->
@@ -131,7 +131,7 @@
                                     <h1 hidden>Pickslot team. Η ομάδα του Picsklot. Online κρατήσεις για beach bars, εστιατόρια, κομμωτήρια και μπαρμπέρικα για Θεσσαλονίκη και Χαλκιδική</h1>
 
                                     <h3 class="f-700 pb-22 pt-30 pr-0" lang="en">Who we are</h3>
-                                    <h3 class="f-700 pb-22 pt-30 pr-0"  lang="gr">Ποιοι είμαστε</h3>
+                                    <h3 class="f-700 pb-22 pt-30 pr-0"  lang="el">Ποιοι είμαστε</h3>
     
                                     <p lang="en">
                                         Pickslot is a project that started from a simple, everyday event: It was Saturday night and one of us needed a haircut. However, the barbershop was closed, so he had to wait until Tuesday to speak to his barber and book his appointment. When Tuesday finally came and the shop opened, he called to make his reservation. However, the barber's schedule was already full. The earliest availability for him was the following week...
@@ -141,7 +141,7 @@
                                         <br><br>
                                         Our goal is one: To offer an application that covers all reservations, combining technology with the needs of businesses and their customers in a simple, integrated environment. 
                                     </p>    
-                                    <p lang="gr">
+                                    <p lang="el">
                                         Είναι Σάββατο βράδυ, έχεις κανονίσει να βγείς. Κοιτάζεσαι στον καθρέφτη πριν φύγεις και παρατηρείς ότι χρειάζεσαι κούρεμα. Πρέπει να κλείσεις ραντεβού, το κομμωτήριο που πηγαίνεις όμως είναι κλειστό. Περνάει η Κυριακή. Η Δευτέρα. Φτάνει η Τρίτη. Παίρνεις τηλέφωνο. Μετά από λίγο ο κομμωτής σου το σηκώνει. Αφού πείτε κάποια τυπικά, ρωτάς αν έχει σήμερα διαθεσιμότητα. Η επόμενη διαθεσιμότητα που σε βολεύει είναι την Τετάρτη. Όχι αυτή, την επόμενη.
                                         <br><br><br><br>
                                         Αυτή είναι μια πραγματική ιστορία που συνέβη σε έναν από εμάς. Ήταν ο τέλειος λόγος να ξεκινήσουμε το <b>Pickslot</b>.
@@ -157,7 +157,7 @@
                         </div><!-- /row -->
                         <div class="row">
                             <div class="col-xl-12  col-lg-12  col-md-12  col-sm-12 col-12 d-flex align-items-center justify-content-center">
-                                <h5 class="f-700 pb-22 pr-0" lang="gr">Όλες οι κρατήσεις, σε μία εφαρμογή.</h5>
+                                <h5 class="f-700 pb-22 pr-0" lang="el">Όλες οι κρατήσεις, σε μία εφαρμογή.</h5>
                                 <h5 class="f-700 pb-22 pr-0"  lang="en">All reservations in a single application.</h5>
                             </div>
                         </div>
@@ -184,10 +184,10 @@
                                 <div class="contact-wrapper pb-20">
                                     <div class="title text-md-center text-lg-left">
                                         <span class="theme-color f-700" lang="en">Stay Connected</span>
-                                        <span class="theme-color f-700" lang="gr">Ας τα πούμε</span>
+                                        <span class="theme-color f-700" lang="el">Ας τα πούμε</span>
 
                                         <h3 class="f-700" lang="en">Contact Us</h3>
-                                        <h3 class="f-700" lang="gr">Επικοινωνία</h3>
+                                        <h3 class="f-700" lang="el">Επικοινωνία</h3>
 
                                     </div>
                                     <ul class="contact-info-content d-md-flex justify-content-between d-lg-block mt-50">
@@ -240,9 +240,9 @@
                                     <div class="contact-form">
                                         <div class="title px-md-5 px-lg-0 text-md-center text-lg-left">
                                             <h3 lang="en" class="f-700 mb-40">Drop us a line!</h3>
-                                            <h3 lang="gr" class="f-700 mb-40">Γράψε μας</h3>
+                                            <h3 lang="el" class="f-700 mb-40">Γράψε μας</h3>
 
-                                            <p lang="gr" class="mb-20">Θέλεις να μάθεις περισσότερα; Γράψε μας σε αυτή τη φόρμα!</p>
+                                            <p lang="el" class="mb-20">Θέλεις να μάθεις περισσότερα; Γράψε μας σε αυτή τη φόρμα!</p>
                                             <p lang="en" class="mb-20">Want to know more about Picsklot? Fill this form!</p>
 
                                         </div><!-- /title -->
@@ -271,7 +271,7 @@
                                                     name="submit" 
                                                     data-aos="fade-up" 
                                                     data-aos-anchor-placement="top-bottom" 
-                                                    data-aos-duration="2500"><span lang="en">Submit</span><span lang="gr">Υποβολη</span></button>
+                                                    data-aos-duration="2500"><span lang="en">Submit</span><span lang="el">Υποβολη</span></button>
                                                 </div>
                                                 
                                             </div>
@@ -310,19 +310,19 @@
                             <div class="col-xl-4 col-lg-4  col-md-4  col-sm-4 col-12">
                                 <div class="footer-widget f-info pb-30 ml-40 pr-20 mt-25">
                                     <h6 class="text-capitalize f-700 mb-22" lang="en">About Pickslot</h6>
-                                    <h6 class="text-capitalize f-700 mb-22" lang="gr">Σχετικά με το Pickslot</h6>
+                                    <h6 class="text-capitalize f-700 mb-22" lang="el">Σχετικά με το Pickslot</h6>
 
                                     <ul class="footer-info">
                                         <li lang="en" >
                                             <a href="#contact" class="position-relative d-inline-block mb-2">Team</a>
                                         </li>
-                                        <li lang="gr" >
+                                        <li lang="el" >
                                             <a href="#contact" class="position-relative d-inline-block mb-2">Ποιοί είμαστε</a>
                                         </li>
                                         <li lang="en" >
                                             <a href="policy.html" class="position-relative d-inline-block mb-2">Privacy Policy</a>
                                         </li>
-                                        <li lang="gr" >
+                                        <li lang="el" >
                                             <a href="policy.html" class="position-relative d-inline-block mb-2">Πολιτική απορρήτου</a>
                                         </li>
                                     </ul>
@@ -331,14 +331,14 @@
                             <div class="col-xl-4  col-lg-4  col-md-4  col-sm-4 col-12">
                                 <div class="footer-widget f-info pb-10 ml-40 pr-20 mt-25">
                                     <h6 class="f-700 mb-22" lang="en">For businesses</h6>
-                                    <h6 class="f-700 mb-22" lang="gr">Επιχειρήσεις</h6>
+                                    <h6 class="f-700 mb-22" lang="el">Επιχειρήσεις</h6>
 
                                     <ul class="footer-info">
                                         <li lang="en" >
                                             <a href="merchants.html" lang="en" class="position-relative d-inline-block mb-2">Join Pickslot</a>
                                         </li>
-                                        <li lang="gr" >
-                                            <a href="merchants.html" lang="gr" class="position-relative d-inline-block mb-2">Γίνε συνεργάτης</a>
+                                        <li lang="el" >
+                                            <a href="merchants.html" lang="el" class="position-relative d-inline-block mb-2">Γίνε συνεργάτης</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -347,8 +347,8 @@
                             <div class="col-xl-4  col-lg-4  col-md-4  col-sm-4 col-4 ">
                                 <div class="footer-widget f-adress pb-10 mt-25">
                                     <h6 lang="en" class="text-capitalize f-700 mb-22">Get in Touch</h6>
-                                    <h6 lang="gr" class="text-capitalize f-700 mb-22">Επικοινωνία</h6>
-                                    <ul lang="gr" class="footer-address">
+                                    <h6 lang="el" class="text-capitalize f-700 mb-22">Επικοινωνία</h6>
+                                    <ul lang="el" class="footer-address">
 
 
                                         <li>
