add animation to the home page

--- a/main-files/index.html
+++ b/main-files/index.html
@@ -211,9 +211,9 @@
 
                         </div>
                     </div><!-- /col -->
-                    <div class="col-xl-6 col-lg-6  col-md-6  col-sm-6 col-6  d-flex align-items-center " data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1000" >
+                    <div class="col-xl-6 col-lg-6  col-md-6  col-sm-6 col-6  d-flex align-items-center " >
                         <div class="slider-img1 pl-65 z-index1 position-relative">
-                            <img class="animated-plus" src="images/feature/home_pic.png" alt="image">
+                            <img class="animated-plus" src="images/feature/animation_home3.gif" alt="image">
                         </div>
                     </div><!-- /col -->
                 </div><!-- /row -->
